<resources>
    <string name="app_name">04-EjercicioInmobiliaria</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="direccion">Direccion</string>
    <string name="numero">Numero</string>
    <string name="cp">CP</string>
    <string name="ciudad">Ciudad</string>
    <string name="provincia">Provincia</string>
    <string name="button">Button</string>
    <string name="Cancelar" />
    <string name="cancelar" />
    <string name="crear" />
</resources>